// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionTooltip should render custom tooltip when focus the children 1`] = `
<span
  aria-describedby={42}
  ariaLabel="a custom tooltip"
  className="theme-tc-tooltip"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <div>
    Action
  </div>
</span>
`;

exports[`ActionTooltip should render only the children 1`] = `
<span
  aria-describedby={42}
  className="theme-tc-tooltip"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <div>
    Action
  </div>
</span>
`;

exports[`ActionTooltip should render tooltip when focus the children 1`] = `
<span
  aria-describedby={42}
  className="theme-tc-tooltip"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <div>
    Action
  </div>
</span>
`;

exports[`ActionTooltip should render tooltip when hover the children 1`] = `
<span
  aria-describedby={42}
  className="theme-tc-tooltip"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <div>
    Action
  </div>
</span>
`;
